[gd_scene load_steps=8 format=3 uid="uid://87viv0xuopov"]

[ext_resource type="Script" uid="uid://mb33jkq42cob" path="res://scenes/objects/plants/corn.gd" id="1_hgaca"]
[ext_resource type="Texture2D" uid="uid://4iljvf30hbbe" path="res://assets/game/objects/basic_plants.png" id="1_hm4is"]
[ext_resource type="PackedScene" uid="uid://crky158adksbs" path="res://scenes/components/hurt_component.tscn" id="2_aphyd"]
[ext_resource type="PackedScene" uid="uid://5d5xd2aqebs3" path="res://scenes/objects/plants/watering_particles.tscn" id="2_ofjf8"]
[ext_resource type="PackedScene" uid="uid://jv0bs1jxefsb" path="res://scenes/objects/plants/flowtering_particles.tscn" id="3_ofjf8"]
[ext_resource type="PackedScene" uid="uid://cqmg5ugsptqxc" path="res://scenes/objects/plants/growth_cycle_component.tscn" id="5_q3ekf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5ucl7"]
size = Vector2(14, 9)

[node name="Corn" type="Node2D"]
script = ExtResource("1_hgaca")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -4)
texture = ExtResource("1_hm4is")
hframes = 6
vframes = 2
frame = 1

[node name="WateringParticles" parent="." instance=ExtResource("2_ofjf8")]

[node name="FlowteringParticles" parent="." instance=ExtResource("3_ofjf8")]

[node name="GrowthCycleComponent" parent="." instance=ExtResource("5_q3ekf")]

[node name="HurtComponent" parent="." instance=ExtResource("2_aphyd")]
position = Vector2(0, -4)
tool = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtComponent"]
position = Vector2(-1, 2.5)
shape = SubResource("RectangleShape2D_5ucl7")
